--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header {
     height: 500px;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .container {
@@ -46,4 +47,16 @@ header {
 }
 .nav-top .menu {
     width: 70%;
+}
+
+
+.jumbo-content {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left:50%;
+    border: 1px black solid;
+    text-align: center;
+    color: white;
+
 }
