--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,18 @@ header {
 
 .img-text-container {
     width: 40%;
+    padding: 30px 50px;
 }
 
 .img-container img {
     width: 550px;
 }
 
+.img-text h2 {
+    font-size: 40px;
+}
+
+.img-text p {
+    font-size: 20px;
+}
 
