problemi con buttom

--- a/css/style.css
+++ b/css/style.css
@@ -97,16 +97,14 @@ header .container .nav-top .login li, footer .container .nav-bottom .login li{
 .button {
     display: inline-block;
     border-radius: 20px;
-    border: 1px solid white;
     background-color: white;
     color: black;
     padding: 10px 20px;
     margin: 0 8px;
 }
-.button:last-child {
+.jumbo-content .buttons-container .button:last-child {
     color: white;
     background-color: black;
-    border: 1px solid black;
 }
 /* end header  */
 
@@ -137,18 +135,21 @@ main .container {
 }
 
 /* big image  */
-.rel {
-    position: relative;
-    height: 900px;
-
+.big-img *{
+    text-align: center;
 }
 
-.content-abs {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    text-align: center;
+.big-img h2{
+    font-size: 40px;
+}
+
+.big-img p {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.big-img img {
+    width: 100%;
 }
 
 #stella {
@@ -163,16 +164,16 @@ main .container {
 
 }
 
-main .container .content-abs .button {
+main .big-img .button {
     background-color: cornflowerblue;
-    border: none;
+    color: white;
+    margin: 0 auto;
 }
 /* end main  */
 
 /* footer  */
 footer {
     background-color: rgb(35, 39, 42);
-
 }
 
 footer .container ul {
@@ -183,6 +184,8 @@ footer .container ul {
 .footer-main {
     width: 40%;
     color: royalblue;
+    font-size: 20px;
+    padding: 10px;
 }
 footer .container ul li:first-child {
     color: royalblue;
