--- a/css/style.css
+++ b/css/style.css
@@ -180,20 +180,27 @@ footer .container ul {
     width: 15%;
     color: white;
 }
+ul * {
+    padding: 8px 0;
+}
 
 .footer-main {
     width: 40%;
     color: royalblue;
-    font-size: 20px;
-    padding: 10px;
-}
-footer .container ul li:first-child {
-    color: royalblue;
+    font-size: 30px;
 }
 
-footer .container {
-    border-bottom:royalblue 1px solid;
+footer .container ul li:first-child {
+    color: royalblue;
+    font-weight: bold;
 }
+
+footer .container:nth-last-child(2) {
+    border-bottom:royalblue 1px solid;
+    padding: 50px 0;
+}
+
+
 
 
 
