--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ header .container .nav-top .login li, footer .container .nav-bottom .login li{
     color: white;
     background-color: black;
 }
+
+.button:first-child:before {
+    content: "\2193  ";
+};
+}
 /* end header  */
 
 /* main  */
@@ -190,6 +195,12 @@ ul * {
     font-size: 30px;
 }
 
+.footer-main img {
+    width: 30px;
+}
+
+
+
 footer .container ul li:first-child {
     color: royalblue;
     font-weight: bold;
@@ -198,6 +209,10 @@ footer .container ul li:first-child {
 footer .container:nth-last-child(2) {
     border-bottom:royalblue 1px solid;
     padding: 50px 0;
+}
+
+.nav-bottom {
+    height: 54px;   
 }
 
 
