--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header .container .nav-top .login li{
     background-color: white;
     color: black;
     padding: 10px 20px;
+    margin: 0 10px;
 }
 .jumbo-content .buttons-container .button:last-child {
     color: white;
@@ -127,10 +128,12 @@ header .container .nav-top .login li{
 
 .img-text h2, .content-abs h2 {
     font-size: 40px;
+    line-height: 45px;
+    padding-bottom: 20px;
 }
 
 .img-text p, .content-abs p {
-    font-size: 20px;
+    font-size: 17px;
 }
 
 main .container {
@@ -144,6 +147,7 @@ main .container {
 
 .big-img h2{
     font-size: 40px;
+    margin-bottom: 20px;
 }
 
 .big-img p {
@@ -161,7 +165,7 @@ main .container {
     background-repeat: no-repeat;
     background-size: contain;
     width: 500px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
     font-weight: bold;
     font-size: 25px;
 
