--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,19 @@ main .container {
     padding: 120px 0;
 }
 
+main .bg-img:nth-child(2), main .bg-img:nth-child(6) {
+    background-image: url(../img/wave.svg);
+    background-color: white;
+    height: 200px;
+}
+
+main .bg-img:nth-child(4) {
+    background-image: url(../img/wave.svg);
+    background-color: lightskyblue;
+    height: 200px;
+}
+
+
 /* big image  */
 .big-img *{
     text-align: center;
@@ -173,7 +186,7 @@ main .container {
 
 
 main .big-img .inutile .button {
-    background-color: cornflowerblue;
+    background-color: royalblue;
     color: white;
 }
 /* end main  */
